--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,11 +1,34 @@
 /* 基本設定（まだよく理解してないけど） */
 *{
-  padding: 0;
+  padding: 0; /* これは、規定値があるので、それをリセットするために記述してるようです（あおなんさん教えてくれた） */
   margin: 0;
 }
+
+#heading{
+  text-align: center;
+  margin: 5px;
+}
+
+/* fieldは最初隠れている */
+#field{
+  display: none;
+}
+
 /* タグ要素は普通にタグ名で{}ってやる */
 canvas{
-  background-color: #000;
+  background-color: #eee;
   display: block;
   margin: 0 auto;
+}
+
+button{
+  height: 50px;
+  width: 70px;
+  font-size: 20px;
+  background-color: #99CCFF;
+  border-radius: 5px;
+}
+
+button:hover{
+  background-color: #33CCFF;
 }
